--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,21 +6,25 @@
     box-sizing: border-box;
   }
   
-  .clearfix::after{
+.clearfix::after{
     clear: both;
     content: '';
     display: table;
   }
   
-  body{
-    background-color: #000;
-    color: #fff;
+body{;
+    background-color: gray;
   }
 
-  header{
-    text-align: center;
-  }
+main{
+    width: 80%;
+    margin: auto;
+    background-color: white;
+}
 
 h1{
     color: pink;
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 50px;
 }
