--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,27 +4,27 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
+}
   
 .clearfix::after{
     clear: both;
     content: '';
     display: table;
-  }
-  
-body{;
-    background-color: gray;
-  }
+}
 
 main{
     width: 80%;
     margin: auto;
-    background-color: white;
+    font-family: 'Domine', serif;
 }
 
 h1{
     color: pink;
     text-align: center;
-    font-family: sans-serif;
     font-size: 50px;
+}
+
+p {
+    line-height: normal;
+    padding: 20px;
 }
