--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,15 +13,16 @@
 }
 
 main{
-    width: 80%;
+    width: 60%;
     margin: auto;
     font-family: 'Domine', serif;
 }
 
 h1{
-    color: pink;
+    color: #E53170;
     text-align: center;
     font-size: 50px;
+    padding: 20px 0px 30px 0px;
 }
 
 p {
