--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,22 @@ h1{
     padding: 20px 0px 30px 0px;
 }
 
-p {
+p{
     line-height: normal;
+}
+
+h2, h3{
+    color: white;
+}
+
+.container{
+    width: 80%;
+    margin: auto;
+}
+
+.column{
+    background-color: black;
+    float: left;
+    width: calc( 100% / 3 );
+
 }
