--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,19 +45,19 @@ h4{
 }
 
 .column {
-
     background-color: black;
     color: white;
-    font-size: normal;
+    font-size: 0.9rem;
     line-height: normal;
     float: left;
     box-shadow: grey;
     width: calc( 90% / 3 );
     margin: 10px;
+    margin-top: 2rem;
 }
 
 .column img{
-    height: 100px;
+    height: 6rem;
     float: left;
 
 }
