--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ h4{
     font-size: 0.9rem;
     line-height: normal;
     float: left;
-    box-shadow: grey;
+    box-shadow: 5px 5px 5px 0px grey;
     width: calc( 90% / 3 );
     margin: 10px;
     margin-top: 2rem;
